--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 12.07.2022 08:47:36</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 12.07.2022 09:11:09</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -7,35 +7,42 @@
 <h5>Úterý, 12. 07. 2022</h5>
 <span class="line"></span>
 <p>
-<strong>Smetanová česneková s krutony</strong>
+<strong>Kapustová</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							35,-
 						</span>
 </p>
 <p>
-<strong>Rajská hovězí pečeně s houskovým knedlíkem nebo těstovinou</strong>
+<strong>Smažený holandský řízek s bramborem a tatarkou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							145,-
+							139,-
 						</span>
 </p>
 <p>
-<strong>Linguiny se smetanovou omáčkou, restovanou slaninou a sýrem</strong>
+<strong>Vepřové srbské rizoto s okurkou a sýrem</strong>
+<!--<span class="dots">..........................................................................</span>-->
+<span class="priceLabel">
+							137,-
+						</span>
+</p>
+<p>
+<strong>Ledový salát s grilovanými kuřecími křidélky</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							133,-
 						</span>
 </p>
 <p>
-<strong>Teplý bufet: kolínko, asijský tuňák, pečené brambory, kus kus, zelenina</strong>
+<strong>Teplý bufet: kuřecí prsa na slanině, Tilapie s rajčaty a parmazánem, kus kus, brambory opečené, zelenina</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							49,-
 						</span>
 </p>
 <p>
-<strong>Salátový bufet: okurkový, míchaná zelenina, tlačenkový</strong>
+<strong>Salátový bufet: Tlačenkový, tzatziki, Míchaná zelenina s česnekovým dresinkem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							45,-
@@ -137,7 +144,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet cerstveho jihoceskeho kapra {prorezavany-bez kosti] s pecenymi rajcaty a petrzelkovym pestem, kari ze zeleneho hrachu s cuketami a zazvorem, salatek 149</li><li>Peceny filet z cerstveho norskeho lososa s pecenymi rajcaty a petrzelkovym pestem, kari ze zeleneho hrachu s cuketami a zazvorem, salatek 179</li><li>Pad kra pao – thajske opekane veprove s bazalkou, zelenymi fazolkami, limetkami a sazenym vejcem, jasminova ryze, salatek 149</li><li>Spagety s nudlickami hoveziho orechu se susenymi rajcaty, pecenou kapustou, petrzelkovym pestem a zralou goudou {L} 179</li><li>Burrito s pikantnim fazolovym chilli s pecenymi palivymi paprikami a   chipotle, pecene brambory, jogurtovy dip, salatek {L} 149</li></ol>
+<ol><li>Peceny filet z atlanticke makrely se sladkokyselym sezamovym dresinkem, ryzove nudle se zeleninou a zelenymi bylinkami 149</li><li>Gravlax z cerstveho norskeho lososa se sladkokyselym sezamovym dresinkem, ryzove nudle se zeleninou a zelenymi bylinkami 179</li><li>Goanske palive a vonave vindalu s veprovym masem a bramborami, jasminova ryze, salatek 149</li><li>Burger s trhanou pecenou kachnou, rajcetem, ledovym salatem, sriracha majonezou a dzemem z cervene cibule, pecene brambory, salatek 179</li><li>Brokolice s quinoou, opecenym halloumi a mladymi cuketkami, jogurtovy dip, salatek 149</li></ol>
 </td>
 </tr>
 </table>
