--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 12.07.2022 15:22:17</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 13.07.2022 07:16:19</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
 <div class="containerPriceList">
 <span class="line"></span>
-<h5>Úterý, 12. 07. 2022</h5>
+<h5>Středa, 13. 07. 2022</h5>
 <span class="line"></span>
 <p>
 <strong>Kapustová</strong>
@@ -64,54 +64,9 @@
 <td>
 <div class="menicka">
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
-<div class="nadpis">Úterý 12.7.2022</div>
+<div class="nadpis">Středa 13.7.2022</div>
 <ul>
-<li class="poznamka">
-<div class="polozka">Pistáciový cheesecake </div>
-<div class="cena">65 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="poznamka">
-<div class="polozka">Višňový dort </div>
-<div class="cena">59 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="poznamka">
-<div class="polozka">Ovocný salát</div>
-<div class="cena">59 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="poznamka">
-<div class="polozka">Variace bavorských baget </div>
-<div class="cena">69 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="polevka">
-<div class="polozka">Zelná polévka s bramborami a uzeným masem; v menu <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em><em title="Celer">9</em></div>
-<div class="cena">39 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="polevka">
-<div class="polozka">Zelná polévka s bramborami a uzeným masem; samostatně <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em><em title="Celer">9</em></div>
-<div class="cena">49 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">1. </span>150g Hovězí váleček na víně, restované žampiony, kořenová zelenina, bramborová kaše <em title="Mléko">7</em><em title="Oxid siřičitý a siřičitany">12</em></div>
-<div class="cena">165 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">2. </span>250g Pečené kuřecí stehno na medu, omáčka z chilli s karotkou, rýže, petržel <em title="Mléko">7</em></div>
-<div class="cena">159 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">3. </span>300g Zapečený květák se smetanou a sýrem, vařené brambory, zelný salát s červenou řepou <em title="Vejce">3</em><em title="Mléko">7</em><em title="Oxid siřičitý a siřičitany">12</em></div>
-<div class="cena">155 Kč</div>
-<div class="clear"></div>
-</li>
-</ul>
+<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
 </div>
 </td>
 </tr>
@@ -122,13 +77,10 @@
 <td>
 <table class="table"><table class="table">
 <tbody>
-<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a s fritátovými nudlemi </td><td class="menuPrice">39,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Česnekový krém s krutóny a praženou anglickou slaninou</td><td class="menuPrice">42,-</td></tr></tbody>
+<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">39,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Zelná s klobásou</td><td class="menuPrice">42,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP</td><td class="menuName">150g Steak z kuřecích prsou na kari s ananasem zjemněné smetanou, dušená jasmínová rýže</td><td class="menuPrice">129,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Rajská omáčka s hovězím masem, těstoviny kolínka</td><td class="menuPrice">145,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Křenová omáčka s moravským uzeným, kynuté houskové knedlíky</td><td class="menuPrice">144,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Pikantní kuřecí směs se zeleninou v bramboráku, strouhaný sýr</td><td class="menuPrice">Vyprodáno</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Vepřová játra v přírodní omáčce s majoránkou, pečené brambory s kmínem, červená cibule</td><td class="menuPrice">143,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová dieta: 150g Do růžova pečená vepřová panenka, smetanová omáčka s barevným drceným pepřem, máslová brokolice, pečený sýrovo vajíčková roláda se šunkou</td><td class="menuPrice">159,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Dukátové buchtičky s vanilkovým šodo a kapkou rumu, karamelem a šlehačkou</td><td class="menuPrice">141,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Steak z vepřové pečeně, jemná houbová omáčka, restované špecle</td><td class="menuPrice">147,-</td></tr><tr><td class="menuWeight">600g</td><td class="menuName">Pečené vepřové koleno na kmíně, bramborové knedlíky, bílé dušené zelí</td><td class="menuPrice">167,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Kuskusový salát s čerstvou zeleninou ochucený citrónovým dresinkem, kuřecí nudličky na tálu, balkánský sýr</td><td class="menuPrice">145,-</td></tr><tr><td class="menuWeight">insta gram</td><td class="menuName">Každý den od 15:00 do 19:00. Pokud nás stále sleduješ na instagramu, můžeš využít své slevy na: 150g Smažený sýr a 150g Steak z vepřové pečeně za 125,- (pro nesledující za 164,-Kč)  Musíš si pouze o tuto cenu říct a prokázat sledování na telefonu</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">insta gram</td><td class="menuName">150g Smažený sýr 45%, vařené brambory s máslem a šnitlíkem, tatarka</td><td class="menuPrice">125,-</td></tr><tr><td class="menuWeight">insta gram</td><td class="menuName">150g Steak z vepřové pečeně se šunkou a sýrem, hranolky</td><td class="menuPrice">125,-</td></tr><tr><td class="menuWeight">insta gram</td><td class="menuName">Černá Barbora 13° - pivovar Ostravar 0,4L se slevou 11,-Kč na pivu pro naše stálé sledující po celý den neomezeně</td><td class="menuPrice">33,-</td></tr></tbody>
-</table><table class="table">
-<tbody>
-<h5 class="border_box_title">Naše dezerty</h5><tr><td class="menuWeight"></td><td class="menuName">Tiramisu</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Naše lívance s redukcí lesního ovoce se zakysanou smetanou</td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Arnoštek 10° - pivovar Pardubice</td><td class="menuPrice">38,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Tanková 11° - pivovar Staropramen</td><td class="menuPrice">43,-</td></tr><tr><td class="menuWeight">0,4l</td><td class="menuName">Černá Barbora 13° - pivovar Ostravar</td><td class="menuPrice">44,-</td></tr><tr><td class="menuWeight">0,4l</td><td class="menuName">Šenkýř ALE 11° - pivovar Muflon</td><td class="menuPrice">46,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">COOL grep nealko</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Houba (0,2l červené víno s 0,3l colou a ledem)</td><td class="menuPrice">49,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Vinný střik (0,2l Zweigeltrebe rose / 0,3l sodovka)</td><td class="menuPrice">49,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Staň se fanouškem našeho instagramu "senkyrna7" a sleduj naše slevové akce. </td><td class="menuPrice"></td></tr><tr><td class="menuWeight"></td><td class="menuName">wi-fi heslo: www.senkyrna.cz</td><td class="menuPrice"></td></tr></tbody></table></table>
+<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP</td><td class="menuName">150g Steak z vepřové pečeně s moravským uzeným gratinované sýrem, bramborové hranolky</td><td class="menuPrice">129,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Pečená vepřová plec na paprice, těstoviny kolínka</td><td class="menuPrice">144,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Hovězí guláš s feferonkou a červenou cibulí, kynuté houskové knedlíky</td><td class="menuPrice">147,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Moravský vrabec, bramborové knedlíky, dušené bílé zelí</td><td class="menuPrice">145,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Drůbeží játra na tálu, pečené brambory s kmínem, volské oko na šunce</td><td class="menuPrice">144,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová dieta: 150g Filírovaná kuřecí prsa, zeleninové lečo s vejci, mrkvovo-batátové pyré, rukola, parmazán</td><td class="menuPrice"> 159,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Dukátové buchtičky s vanilkovým šodo a kapkou rumu, karamelem a šlehačkou</td><td class="menuPrice">141,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Smažený květák, vařené nové brambory s máslem a šnitlíkem, tatarka</td><td class="menuPrice">145,-</td></tr><tr><td class="menuWeight">600g</td><td class="menuName">Pečené vepřové koleno ve vlastní šťávě, hořčice, cibule, křen, beraní roh, vařené nové brambory s máslem a šnitlíkem</td><td class="menuPrice">167,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Salát z trhaných listů a zeleniny promíchaný olivovým olejem, řezy z vepřové panenky, vařené vejce, parmazán</td><td class="menuPrice">147,-</td></tr><tr><td class="menuWeight">insta gram</td><td class="menuName">Každý den od 15:00 do 19:00. Pokud nás stále sleduješ na instagramu, můžeš využít své slevy na: 150g Smažený sýr a 150g Steak z vepřové pečeně za 125,- (pro nesledující za 164,-Kč)  Musíš si pouze o tuto cenu říct a prokázat sledování na telefonu</td><td class="menuPrice">125,-</td></tr><tr><td class="menuWeight">insta gram</td><td class="menuName">150g Smažený sýr 45%, vařené brambory s máslem a šnitlíkem, tatarka</td><td class="menuPrice">125,-</td></tr><tr><td class="menuWeight">insta gram</td><td class="menuName">150g Steak z vepřové pečeně se šunkou a sýrem, hranolky</td><td class="menuPrice">125,-</td></tr><tr><td class="menuWeight">insta gram</td><td class="menuName">Černá Barbora 13° - pivovar Ostravar 0,4L se slevou 11,-Kč na pivu pro naše stálé sledující po celý den neomezeně</td><td class="menuPrice">33,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Tiramisu</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Naše lívance s redukcí lesního ovoce se zakysanou smetanou</td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Dnes na čepu</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Arnoštek 10° - pivovar Pardubice</td><td class="menuPrice">38,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Tanková 11° - pivovar Staropramen</td><td class="menuPrice">43,-</td></tr><tr><td class="menuWeight">0,4l</td><td class="menuName">Černá Barbora 13° - pivovar Ostravar</td><td class="menuPrice">44,-</td></tr><tr><td class="menuWeight">0,4l</td><td class="menuName">Šenkýř ALE 11° - pivovar Muflon</td><td class="menuPrice">46,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">COOL grep nealko</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Houba (0,2l červené víno s 0,3l colou a ledem)</td><td class="menuPrice">49,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Vinný střik (0,2l Zweigeltrebe rose / 0,3l sodovka)</td><td class="menuPrice">49,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Staň se fanouškem našeho instagramu "senkyrna7" a sleduj naše slevové akce. </td><td class="menuPrice"></td></tr><tr><td class="menuWeight"></td><td class="menuName">wi-fi heslo: www.senkyrna.cz</td><td class="menuPrice"></td></tr></tbody></table></table>
 </td>
 </tr>
 </table>
@@ -136,71 +88,7 @@
 <tr><th>MATTES<br><a href="https://www.mattesrestaurace.cz/">https://www.mattesrestaurace.cz/</a></th></tr>
 <tr>
 <td>
-<table class="dm">
-<tbody>
-<tr>
-<td class="amount">0,4 l</td>
-<td class="title">Gazpacho – studená zeleninová polévka s bazalkou ricottou a krutony 1a,3,7,9</td>
-<td class="pricem">79 Kč</td>
-</tr>
-<tr>
-<td class="amount">100 g</td>
-<td class="title">Grilovaný krevetový špíz s variací trhaných salátů, cherry rajčaty, mrkví,
-opečeným citronem a bagetou 1a,3,4,7,12</td>
-<td class="pricem">189 Kč</td>
-</tr>
-<tr>
-<td class="amount">300 g</td>
-<td class="title">Vepřová kotleta Tomahawk s omáčkou chimichirri, grilovanou kukuřicí
-a pečenou bramborou s česnekovým zákysem 1a,7,12</td>
-<td class="pricem">285 Kč</td>
-</tr>
-<tr>
-<td class="amount">400 g</td>
-<td class="title">Panzanella s mozzarellou - salát z čerstvé zeleniny, řapíkatého celeru, bazalky a mozzarelly
-s olivovým olejem extra virgin 1ab,7,9,12</td>
-<td class="pricem">195 Kč</td>
-</tr>
-<tr>
-<td class="amount"></td>
-<td class="title">Grilovaný ananas s limetkovým sorbetem a slanou karamelovou omáčkou 7</td>
-<td class="pricem">99 Kč</td>
-</tr>
-</tbody>
-</table>
-</td>
-</tr>
-<tr>
-<td>
-<table class="dm">
-<tbody>
-<tr>
-<td class="title">Gin Tonic Okurkový<br/>
-gin / tonic / čerstvá okurka / led</td>
-<td class="pricem">109 Kč</td>
-</tr>
-<tr>
-<td class="title">Gin Tonic PINK<br/>
-malinový gin / tonic  / lesní plody / ovoce / led</td>
-<td class="pricem">109 Kč</td>
-</tr>
-<tr>
-<td class="title">Gin Tonic Zázvorový / Ginger<br/>
-gin / zázvorový tonic / citron / led</td>
-<td class="pricem">109 Kč</td>
-</tr>
-<tr>
-<td class="title">Gin Tonic Targa Florio<br/>
-gin / citronová limonáda / citron / led</td>
-<td class="pricem">109 Kč</td>
-</tr>
-<tr>
-<td class="title">Gin Tonic Pomerančový / Orange<br/>
-pomerančový gin / tonic / pomeranč / led</td>
-<td class="pricem">109 Kč</td>
-</tr>
-</tbody>
-</table>
+<table class="dm"><tr><td class="amount"> </td><td class="title">Hrachová s uzeninou a chlebovými krutony 1ab</td><td class="pricem">43 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Hovězí chilli con carne s našimi bramboráčky, zakysanou smetanou a koriandrem 1a,3,7</td><td class="pricem">155 Kč</td><tr><tr><td class="amount">180g</td><td class="title">Grilovaný steak z vepřové krkovice s omáčkou ze peleného pepře, restovanými kapustičkami a cibulovými brambory 1a,7</td><td class="pricem">149 Kč</td><tr><tr><td class="amount">400g</td><td class="title">Gratinované papriky plněné balkánským sýrem na zeleninovém salátu s rozpečenou bylinkovou bagetou 1a,3,7</td><td class="pricem">145 Kč</td><tr></tr></tr></tr></tr></tr></tr></tr></tr></table>
 </td>
 </tr>
 </table>
