--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 13.07.2022 08:46:54</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 13.07.2022 09:11:08</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -7,52 +7,45 @@
 <h5>Středa, 13. 07. 2022</h5>
 <span class="line"></span>
 <p>
-<strong>Kapustová</strong>
+<strong>Bramboračka</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							35,-
 						</span>
 </p>
 <p>
-<strong>Smažený holandský řízek s bramborem a tatarkou</strong>
+<strong>Kuřecí nudličky na červeném kari s limetkovým kuskusem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							139,-
 						</span>
 </p>
 <p>
-<strong>Vepřové srbské rizoto s okurkou a sýrem</strong>
+<strong>Štika po Toskánsku s pečeným bramborem a bylinkovým dipem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							137,-
+							143,-
 						</span>
 </p>
 <p>
-<strong>Ledový salát s grilovanými kuřecími křidélky</strong>
+<strong>Celerový salát s restovanou šunkou a bagetkou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							133,-
+							131,-
 						</span>
 </p>
 <p>
-<strong>Teplý bufet: kuřecí prsa na slanině, Tilapie s rajčaty a parmazánem, kus kus, brambory opečené, zelenina</strong>
+<strong>Teplý bufet: Tilapie s rajčaty a parmazánem, rýže, zelenina, smetanové brambory, Kuřecí křídla</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							49,-
 						</span>
 </p>
 <p>
-<strong>Salátový bufet: Tlačenkový, tzatziki, Míchaná zelenina s česnekovým dresinkem</strong>
+<strong>Salátový bufet: tzatziki, rajčatový</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							45,-
-						</span>
-</p>
-<p>
-<strong>Dresinky: jogurtový s česnekem, balsamico, paprikový</strong>
-<!--<span class="dots">..........................................................................</span>-->
-<span class="priceLabel">
-							0,-
 						</span>
 </p>
 </div>
@@ -79,6 +72,16 @@
 <li class="poznamka">
 <div class="polozka">Kokosová bábovka</div>
 <div class="cena">39 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Ovocný salát</div>
+<div class="cena">59 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Malinový jogurt</div>
+<div class="cena">59 Kč</div>
 <div class="clear"></div>
 </li>
 <li class="polevka">
@@ -136,7 +139,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z atlanticke makrely se sladkokyselym sezamovym dresinkem, ryzove nudle se zeleninou a zelenymi bylinkami 149</li><li>Gravlax z cerstveho norskeho lososa se sladkokyselym sezamovym dresinkem, ryzove nudle se zeleninou a zelenymi bylinkami 179</li><li>Goanske palive a vonave vindalu s veprovym masem a bramborami, jasminova ryze, salatek 149</li><li>Burger s trhanou pecenou kachnou, rajcetem, ledovym salatem, sriracha majonezou a dzemem z cervene cibule, pecene brambory, salatek 179</li><li>Brokolice s quinoou, opecenym halloumi a mladymi cuketkami, jogurtovy dip, salatek 149</li></ol>
+<ol><li>Filet z z atlantickeho hejka smazeny v pivnim testicku, bramborovy salat s cervenou repou, zelenymi bylinkami, cibulkou a majonezou, citron {L} 149</li><li>Peceny filet z cerstve prazmy kralovske s relisem z cerstvych okurek, bramborovy salat s cervenou repou, zelenymi bylinkami, cibulkou a majonezou 179</li><li>Burrito s trhanym barbecue hovezim s pecenymi palivymi paprikami a cervenymi fazolemi, jogurovy dip, jasminova ryze, salatek {L} 149</li><li>Grilovane medailonky z krutich prsou s fazolovymi lusky a houbovou omackou, pecene brambory, salatek {L} 179</li><li>Zapecene papriky plnene indickym kari ze zeleneho hrachu se zazvorem, jogurtem a makem, salatek 149</li></ol>
 </td>
 </tr>
 </table>
