--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 13.07.2022 09:36:14</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 13.07.2022 10:15:33</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -105,7 +105,7 @@
 <div class="clear"></div>
 </li>
 <li class="jidlo">
-<div class="polozka"><span class="poradi">3. </span>100g Grilovaný hermelín s bylinkovým pestem, pečené brambory, tatarská omáčka, rukolový salát, cherry rajčata <em title="Mléko">7</em><em title="Hořčice">10</em></div>
+<div class="polozka"><span class="poradi">3. </span>100g Grilovaný hermelín s pestem že sušených rajčat, pečené brambory, tatarská omáčka, rukolový salát, cherry rajčata <em title="Mléko">7</em><em title="Hořčice">10</em></div>
 <div class="cena">159 Kč</div>
 <div class="clear"></div>
 </li>
