--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,56 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 13.07.2022 14:21:20</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 13.07.2022 15:10:06</small><table >
+<tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
+<tr>
+<td>
+<div class="containerPriceList">
+<span class="line"></span>
+<h5>Středa, 13. 07. 2022</h5>
+<span class="line"></span>
+<p>
+<strong>Bramboračka</strong>
+<!--<span class="dots">..........................................................................</span>-->
+<span class="priceLabel">
+							35,-
+						</span>
+</p>
+<p>
+<strong>Kuřecí nudličky na červeném kari s limetkovým kuskusem</strong>
+<!--<span class="dots">..........................................................................</span>-->
+<span class="priceLabel">
+							139,-
+						</span>
+</p>
+<p>
+<strong>Štika po Toskánsku s pečeným bramborem a bylinkovým dipem</strong>
+<!--<span class="dots">..........................................................................</span>-->
+<span class="priceLabel">
+							143,-
+						</span>
+</p>
+<p>
+<strong>Celerový salát s restovanou šunkou a bagetkou</strong>
+<!--<span class="dots">..........................................................................</span>-->
+<span class="priceLabel">
+							131,-
+						</span>
+</p>
+<p>
+<strong>Teplý bufet: Tilapie s rajčaty a parmazánem, rýže, zelenina, smetanové brambory, Kuřecí křídla</strong>
+<!--<span class="dots">..........................................................................</span>-->
+<span class="priceLabel">
+							49,-
+						</span>
+</p>
+<p>
+<strong>Salátový bufet: tzatziki, rajčatový</strong>
+<!--<span class="dots">..........................................................................</span>-->
+<span class="priceLabel">
+							45,-
+						</span>
+</p>
+</div>
+</td>
+</tr>
 <table>
 <tr><th>KUTA<br><a href="https://www.menicka.cz/4728-kuta-restaurace-.html">https://www.menicka.cz/4728-kuta-restaurace-.html</a></th></tr>
 <tr>
@@ -72,6 +124,78 @@
 </table><table class="table">
 <tbody>
 <h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP</td><td class="menuName">150g Steak z vepřové pečeně s moravským uzeným gratinované sýrem, bramborové hranolky</td><td class="menuPrice">129,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Pečená vepřová plec na paprice, těstoviny kolínka</td><td class="menuPrice">144,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Hovězí guláš s feferonkou a červenou cibulí, kynuté houskové knedlíky</td><td class="menuPrice">147,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Moravský vrabec, bramborové knedlíky, dušené bílé zelí</td><td class="menuPrice">145,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Drůbeží játra na tálu, pečené brambory s kmínem, volské oko na šunce</td><td class="menuPrice">144,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová dieta: 150g Filírovaná kuřecí prsa, zeleninové lečo s vejci, mrkvovo-batátové pyré, rukola, parmazán</td><td class="menuPrice"> 159,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Dukátové buchtičky s vanilkovým šodo a kapkou rumu, karamelem a šlehačkou</td><td class="menuPrice">141,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Smažený květák, vařené nové brambory s máslem a šnitlíkem, tatarka</td><td class="menuPrice">145,-</td></tr><tr><td class="menuWeight">600g</td><td class="menuName">Pečené vepřové koleno ve vlastní šťávě, hořčice, cibule, křen, beraní roh, vařené nové brambory s máslem a šnitlíkem</td><td class="menuPrice">167,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Salát z trhaných listů a zeleniny promíchaný olivovým olejem, řezy z vepřové panenky, vařené vejce, parmazán</td><td class="menuPrice">147,-</td></tr><tr><td class="menuWeight">insta gram</td><td class="menuName">Každý den od 15:00 do 19:00. Pokud nás stále sleduješ na instagramu, můžeš využít své slevy na: 150g Smažený sýr a 150g Steak z vepřové pečeně za 125,- (pro nesledující za 164,-Kč)  Musíš si pouze o tuto cenu říct a prokázat sledování na telefonu</td><td class="menuPrice">125,-</td></tr><tr><td class="menuWeight">insta gram</td><td class="menuName">150g Smažený sýr 45%, vařené brambory s máslem a šnitlíkem, tatarka</td><td class="menuPrice">125,-</td></tr><tr><td class="menuWeight">insta gram</td><td class="menuName">150g Steak z vepřové pečeně se šunkou a sýrem, hranolky</td><td class="menuPrice">125,-</td></tr><tr><td class="menuWeight">insta gram</td><td class="menuName">Černá Barbora 13° - pivovar Ostravar 0,4L se slevou 11,-Kč na pivu pro naše stálé sledující po celý den neomezeně</td><td class="menuPrice">33,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Tiramisu</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Naše lívance s redukcí lesního ovoce se zakysanou smetanou</td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Dnes na čepu</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Arnoštek 10° - pivovar Pardubice</td><td class="menuPrice">38,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Tanková 11° - pivovar Staropramen</td><td class="menuPrice">43,-</td></tr><tr><td class="menuWeight">0,4l</td><td class="menuName">Černá Barbora 13° - pivovar Ostravar</td><td class="menuPrice">44,-</td></tr><tr><td class="menuWeight">0,4l</td><td class="menuName">Šenkýř ALE 11° - pivovar Muflon</td><td class="menuPrice">46,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">COOL grep nealko</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Houba (0,2l červené víno s 0,3l colou a ledem)</td><td class="menuPrice">49,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Vinný střik (0,2l Zweigeltrebe rose / 0,3l sodovka)</td><td class="menuPrice">49,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Staň se fanouškem našeho instagramu "senkyrna7" a sleduj naše slevové akce. </td><td class="menuPrice"></td></tr><tr><td class="menuWeight"></td><td class="menuName">wi-fi heslo: www.senkyrna.cz</td><td class="menuPrice"></td></tr></tbody></table></table>
+</td>
+</tr>
+</table>
+<table>
+<tr><th>MATTES<br><a href="https://www.mattesrestaurace.cz/">https://www.mattesrestaurace.cz/</a></th></tr>
+<tr>
+<td>
+<table class="dm">
+<tbody>
+<tr>
+<td class="amount">0,4 l</td>
+<td class="title">Gazpacho – studená zeleninová polévka s bazalkou ricottou a krutony 1a,3,7,9</td>
+<td class="pricem">79 Kč</td>
+</tr>
+<tr>
+<td class="amount">100 g</td>
+<td class="title">Grilovaný krevetový špíz s variací trhaných salátů, cherry rajčaty, mrkví,
+opečeným citronem a bagetou 1a,3,4,7,12</td>
+<td class="pricem">189 Kč</td>
+</tr>
+<tr>
+<td class="amount">300 g</td>
+<td class="title">Vepřová kotleta Tomahawk s omáčkou chimichirri, grilovanou kukuřicí
+a pečenou bramborou s česnekovým zákysem 1a,7,12</td>
+<td class="pricem">285 Kč</td>
+</tr>
+<tr>
+<td class="amount">400 g</td>
+<td class="title">Panzanella s mozzarellou - salát z čerstvé zeleniny, řapíkatého celeru, bazalky a mozzarelly
+s olivovým olejem extra virgin 1ab,7,9,12</td>
+<td class="pricem">195 Kč</td>
+</tr>
+<tr>
+<td class="amount"></td>
+<td class="title">Grilovaný ananas s limetkovým sorbetem a slanou karamelovou omáčkou 7</td>
+<td class="pricem">99 Kč</td>
+</tr>
+</tbody>
+</table>
+</td>
+</tr>
+<tr>
+<td>
+<table class="dm">
+<tbody>
+<tr>
+<td class="title">Gin Tonic Okurkový<br/>
+gin / tonic / čerstvá okurka / led</td>
+<td class="pricem">109 Kč</td>
+</tr>
+<tr>
+<td class="title">Gin Tonic PINK<br/>
+malinový gin / tonic  / lesní plody / ovoce / led</td>
+<td class="pricem">109 Kč</td>
+</tr>
+<tr>
+<td class="title">Gin Tonic Zázvorový / Ginger<br/>
+gin / zázvorový tonic / citron / led</td>
+<td class="pricem">109 Kč</td>
+</tr>
+<tr>
+<td class="title">Gin Tonic Targa Florio<br/>
+gin / citronová limonáda / citron / led</td>
+<td class="pricem">109 Kč</td>
+</tr>
+<tr>
+<td class="title">Gin Tonic Pomerančový / Orange<br/>
+pomerančový gin / tonic / pomeranč / led</td>
+<td class="pricem">109 Kč</td>
+</tr>
+</tbody>
+</table>
 </td>
 </tr>
 </table>
